--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "mongodb": "^3.4.1",
+    "mongoose": "^5.8.9",
     "mysql2": "^2.1.0",
     "pug": "^2.0.3",
     "sequelize": "^5.21.3"
