--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "start-server": "node app.js"
   },
   "author": "Maximilian Schwarzmüller",
   "license": "ISC",
@@ -17,10 +18,10 @@
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
-    "mongodb": "^3.4.1",
-    "mongoose": "^5.8.9",
-    "mysql2": "^2.1.0",
+    "mongodb": "^3.1.6",
+    "mongoose": "^5.2.17",
+    "mysql2": "^1.6.1",
     "pug": "^2.0.3",
-    "sequelize": "^5.21.3"
+    "sequelize": "^5.0.0-beta.11"
   }
 }
